k8s/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskflow-worker
  template:
    metadata:
      labels:
        app: taskflow-worker
    spec:
      containers:
      - name: worker
        image: 657577038059.dkr.ecr.us-east-1.amazonaws.com/taskflow-worker:latest
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          exec:
            command: ["pgrep", "node"]
          initialDelaySeconds: 30
